change image size

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ figcaption
 {
 line-height: 27px;
 font-size:14px;
-width:200px;}
+width:415px;
+padding:5px;}
 
 figcaption strong
 {
@@ -97,8 +98,12 @@ margin-bottom: 20px;
 {
 float:left;
 margin-right:25px;
-margin-bottom: 20px;}
+margin-bottom: 20px;
+}
 
+#three_columns .img-item img{
+	width:425px;
+}
 #three_columns .img-item a
 {
 position:relative;
@@ -111,7 +116,7 @@ position:absolute;
 top:0;
 left:0;
 width:100%;
-height:181px;
+height:100%;
 background: #000 url(img/zoom.png) center center no-repeat;
 z-index:99;
 opacity: 0;
