--- a/style.css
+++ b/style.css
@@ -139,10 +139,8 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-background: #000 url(img/zoom.png) center center no-repeat;
 z-index:99;
-opacity: 0;
-transition: opacity .5s ease;}
+opacity: 0;}
 
 .thumb-screen:hover
 {
