--- a/style.css
+++ b/style.css
@@ -264,11 +264,7 @@ clip: rect(1px, 1px, 1px, 1px);}
 
 @media (max-width: 915px)
 {
-#boxcontent article
-{
-float: none;
-margin: 30px auto 0 auto;
-width: 60%;}
+
 
 #three_columns
 {
@@ -292,9 +288,9 @@ padding-bottom: 20px;
 @media (max-width: 765px)
 {
 
-header
-{
-height:120px;}
+header {
+height:350px;
+}
 
 header nav
 {
