--- a/style.css
+++ b/style.css
@@ -86,12 +86,11 @@ h1
 border-top: 1px solid #D6D0C1;
 font-size:24px;
 line-height:40px;
-padding: 20px;
+padding:40px 30px 20px 20px;
 margin-bottom: 30px;
 color:gray;
 font-weight: 300;
 max-width:1200px;
-padding-right: 30px;
 margin-top: 50px;
 }
 
