--- a/style.css
+++ b/style.css
@@ -129,7 +129,8 @@ margin-bottom: 20px;
 #three_columns .img-item a
 {
 position:relative;
-display:block;}
+display:block;
+}
 
 .thumb-screen
 {
@@ -299,6 +300,12 @@ padding-bottom: 20px;
 header {
 height:350px;
 }
+
+#three_columns .img-item a
+{
+position:relative;
+display:block;
+top:50px;}
 
 header nav
 {
