--- a/style.css
+++ b/style.css
@@ -295,21 +295,27 @@ padding-bottom: 20px;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media (max-width: 320px)
+{
 /* Styles */
 
 header {
 height:350px;
 }
 
+#logo img{
+width:100px;
+}
+    
+nav ul li a{
+font-size:10px;
+    }
 
-#three_columns .img-item a
-{
-position:relative;
-display:block;
-top:50px;}
+#three_columns .img-item a img{
+        width:100px;
+    }
+
+
 
 #three_columns .img-item img{
 	max-width:200px;
@@ -345,4 +351,5 @@ width: auto;}
 
 footer .wrapper .social
 {
-display:none;}}
+display:none;}
+}
