--- a/style.css
+++ b/style.css
@@ -303,6 +303,11 @@ header {
 height:350px;
 }
 
+h1
+{
+font-size:16px;
+}
+
 #logo img{
 width:100px;
 }
@@ -312,7 +317,7 @@ font-size:10px;
     }
 
 #three_columns .img-item a img{
-        width:100px;
+        width:200px;
     }
 
 
