--- a/style.css
+++ b/style.css
@@ -314,16 +314,17 @@ width:100px;
     
 nav ul li a{
 font-size:10px;
-    }
+top: 20px;
+float: left;}
 
 #three_columns .img-item a img{
-        width:200px;
+        width:300px;
     }
 
 
 
 #three_columns .img-item img{
-	max-width:200px;
+	max-width:300px;
 }
 
 nav ul
