--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ height:350px;
 h1
 {
 font-size:16px;
+line-height: 20px;
 }
 
 #logo img{
@@ -314,17 +315,17 @@ width:100px;
     
 nav ul li a{
 font-size:10px;
-top: 20px;
+top: 40px;
 float: left;}
 
 #three_columns .img-item a img{
-        width:300px;
+        width:200px;
     }
 
 
 
 #three_columns .img-item img{
-	max-width:300px;
+	max-width:200px;
 }
 
 nav ul
