--- a/style.css
+++ b/style.css
@@ -308,7 +308,6 @@ font-size:16px;
 line-height: 22px;
 border-top: 1px solid #D6D0C1;
 font-size: 16px;
-line-height: 40px;
 padding: 20px;
 margin-bottom: 30px;
 color: gray;
@@ -317,6 +316,13 @@ max-width: 1200px;
 margin-top: 20px;
 text-align: center;
 }
+
+figcaption
+{
+line-height: 20px;
+font-size:14px;
+width:320px;
+padding:5px;}
 
 #logo img{
 width:100px;
