add intro text class plus make images 270px wide

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ header {
 height:300px;
 }
 
-h1
+h1 .introtext
 {
 font-size:18px;
 line-height: 26px;
@@ -343,7 +343,7 @@ font-size:10px;
 float: left;}
 
 #three_columns .img-item a img{
-        width:250px;
+        width:270px;
     }
 
 #three_columns .img-item {
@@ -352,7 +352,7 @@ float: left;}
     }
 
 #three_columns .img-item img{
-	max-width:200px;
+	max-width:320px;
 }
 
 #three_columns .img-item{
