--- a/style.css
+++ b/style.css
@@ -1,409 +1,387 @@
 /* Global Styles */
-body
-{
-border-top: 5px solid #e56038;
-background: white;
-font-family: 'Lato', sans-serif;
-color: #333333;
+body {
+    border-top: 5px solid #e56038;
+    background: #FFF;
+    font-family: Lato, sans-serif;
+    color: #333;
 }
 
-p
-{
-margin: 5px 0;
-line-height: 25px;}
+p {
+    margin: 5px 0;
+    line-height: 25px;
+}
 
-a
-{
-text-decoration: none;
-color: inherit;
-transition: color .5s ease;}
+a {
+    text-decoration: none;
+    color: inherit;
+    transition: color .5s ease;
+}
 
-strong
-{
-font-weight: bold;}
+strong {
+    font-weight: 700;
+}
 
-figcaption
-{
-line-height: 27px;
-font-size:16px;
-width:415px;
-padding:5px;}
+figcaption {
+    line-height: 27px;
+    font-size: 16px;
+    width: 415px;
+    padding: 5px;
+}
 
-figcaption strong
-{
-border-bottom: 1px solid #D6D0C1;
-padding-bottom:2px;
-margin: 0px 0;
-display:block;}
-
-
+figcaption strong {
+    border-bottom: 1px solid #D6D0C1;
+    padding-bottom: 2px;
+    margin: 0;
+    display: block;
+}
 
 /* Header Styles */
-header{
-position:relative;
-width:auto;
-max-width:1100px;
-margin: 0 auto 0px auto;
+header {
+    position: relative;
+    width: auto;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
-
-#logo{
-margin: 35px 0 0px 0;
-width:90px;
+#logo {
+    margin: 35px 0 0;
+    width: 90px;
 }
 
-nav ul{
-list-style:none;
-margin-top: -40px;
+nav ul {
+    list-style: none;
+    margin-top: -40px;
 }
 
-
-nav ul li
-{
-display:block;
-float:right;
-padding:3px 15px;
+nav ul li {
+    display: block;
+    float: right;
+    padding: 3px 15px;
 }
 
-
-nav ul li a
-{
-font-family: 'Lato', sans-serif;
-text-transform: uppercase;
-transition: all .25s ease;
-font-size: 20px;
-font-weight: 400;
+nav ul li a {
+    font-family: Lato, sans-serif;
+    text-transform: uppercase;
+    transition: all .25s ease;
+    font-size: 20px;
+    font-weight: 400;
 }
 
-
-nav ul li a:hover{
-color: #E56038;}
+nav ul li a:hover {
+    color: #E56038;
+}
 
 /* Body Styles */
-
-h1
-{
-border-top: 1px solid #D6D0C1;
-font-size:24px;
-line-height:40px;
-padding:40px 30px 20px 20px;
-margin-bottom: 30px;
-color:gray;
-font-weight: 300;
-max-width:1200px;
-margin-top: 50px;
+h1 {
+    border-top: 1px solid #D6D0C1;
+    font-size: 24px;
+    line-height: 40px;
+    padding: 40px 30px 20px 20px;
+    margin-bottom: 30px;
+    color: gray;
+    font-weight: 300;
+    max-width: 1200px;
+    margin-top: 50px;
 }
 
-h1 a{
-font-weight: 500;
-text-decoration: underline;
+h1 a {
+    font-weight: 500;
+    text-decoration: underline;
 }
 
-.container
-{
-width:auto;
-margin: 0 auto;
-position:relative;}
-
-#three_columns, #text_columns
-{
-line-height:25px;
-font-family: 'Lato', sans-serif;
-width:auto;
-max-width:1100px;
-margin-left:auto;
-margin-right: auto;
-font-weight: 300;
+.container {
+    width: auto;
+    margin: 0 auto;
+    position: relative;
 }
 
-#three_columns .img-item
-{
-float:left;
-margin-right:15px;
-margin-bottom: 20px;
+#three_columns,#text_columns {
+    line-height: 25px;
+    font-family: Lato, sans-serif;
+    width: auto;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 300;
 }
 
-#three_columns .img-item img{
-	width:520px;
-}
-#three_columns .img-item a
-{
-position:relative;
-display:block;
+#three_columns .img-item {
+    float: left;
+    margin-right: 15px;
+    margin-bottom: 20px;
 }
 
-.thumb-screen
-{
-display:block;
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-z-index:99;
-opacity: 0;}
-
-.thumb-screen:hover
-{
-opacity:0.8;
-color:white;
+#three_columns .img-item img {
+    width: 520px;
 }
 
-.project{
-	text-align: left;
-	padding:40px 40px 0 40px;
-	font-size:25px;
-	font-weight: 500px;
+#three_columns .img-item a {
+    position: relative;
+    display: block;
 }
 
-.genre{
-	font-size:20px;
-	font-weight: 300px;
+.thumb-screen {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    opacity: 0;
 }
 
-hr{
-width: 70%;
-}
-.dates{
-	text-align: center;
+.thumb-screen:hover {
+    opacity: 0.8;
+    color: #FFF;
 }
 
-.projectimage:hover{
-	color: black;
-	opacity: 1;
-
+.project {
+    text-align: left;
+    padding: 40px 40px 0;
+    font-size: 25px;
+    font-weight: 500px;
 }
 
+.genre {
+    font-size: 20px;
+    font-weight: 300px;
+}
+
+hr {
+    width: 70%;
+}
+
+.dates {
+    text-align: center;
+}
+
+.projectimage:hover {
+    color: #000;
+    opacity: 1;
+}
 
 /* Footer Styles */
-footer{
-position:relative;
-clear:both;
-width:auto;
-height:150px;
-margin: 0;}
-
-footer .wrapper{
-line-height:25px;
-margin: 0 auto;
-padding-top:30px;
-width:auto;
-max-width:900px;
-font-size:18px;
-color:white;
-text-align: center}
-
-footer .wrapper ul
-{
-list-style: none;
+footer {
+    position: relative;
+    clear: both;
+    width: auto;
+    height: 150px;
+    margin: 0;
 }
 
-footer .wrapper ul li{
-display:inline-block;
-text-align: center;
-padding:3px 15px;
-margin-top:-20px;
+footer .wrapper {
+    line-height: 25px;
+    margin: 0 auto;
+    padding-top: 30px;
+    width: auto;
+    max-width: 900px;
+    font-size: 18px;
+    color: #FFF;
+    text-align: center;
 }
 
-footer .wrapper ul li a
-{
-font-family: 'Lato', sans-serif;
-text-transform: uppercase;
-transition: all .25s ease;
+footer .wrapper ul {
+    list-style: none;
 }
 
-#copyright
-{
-background: #1D1D1D;
-height:70px;
-position:absolute;
-bottom:0;
-left:0;
-width:100%;}
+footer .wrapper ul li {
+    display: inline-block;
+    text-align: center;
+    padding: 3px 15px;
+    margin-top: -20px;
+}
 
-#copyright .wrapper
-{
-font-family: 'Lato', sans-serif;
-padding-top:25px;
-color: #5e5e5e;
-font-size:14px !important;
-position:relative;}
+footer .wrapper ul li a {
+    font-family: Lato, sans-serif;
+    text-transform: uppercase;
+    transition: all .25s ease;
+}
 
+#copyright {
+    background: #1D1D1D;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
 
-#copyright .wrapper .social
-{
-position:absolute;
-right:0;
-top:25px;}
+#copyright .wrapper {
+    font-family: Lato, sans-serif;
+    padding-top: 25px;
+    color: #5e5e5e;
+    font-size: 14px;
+    position: relative;
+}
 
-#copyright .wrapper .social a
-{
-transition: opacity .25s ease;
-opacity: 0.3;
-margin-left: 12px;
-display:block;
-float:left;}
+#copyright .wrapper .social {
+    position: absolute;
+    right: 0;
+    top: 25px;
+}
 
-#copyright .wrapper .social a:hover
-{
-opacity: 0.7;}
+#copyright .wrapper .social a {
+    transition: opacity .25s ease;
+    opacity: 0.3;
+    margin-left: 12px;
+    display: block;
+    float: left;
+}
 
-#copyright .wrapper a
-{
-color: #ABABAB;}
+#copyright .wrapper .social a:hover {
+    opacity: 0.7;
+}
 
-#copyright .wrapper a:hover
-{
-color: #fff;}
+#copyright .wrapper a {
+    color: #ABABAB;
+}
+
+#copyright .wrapper a:hover {
+    color: #fff;
+}
 
 /* misc CSS */
+.clear {
+    clear: both;
+}
 
-.clear
-{
-clear:both;}
-
-.hidden
-{
-position:absolute;
-clip: rect(1px 1px 1px 1px); /* IE6 & 7 */
-clip: rect(1px, 1px, 1px, 1px);}
+.hidden {
+    position: absolute;
+    clip: rect(1px1px1px1px);
+/* IE6 & 7 */
+    clip: rect(1px,1px,1px,1px);
+}
 
 /* mobile */
-@media (max-width: 915px)
-{
-
-
-#three_columns
-{
-width: 500px;}
-
-#three_columns .img-item:nth-of-type(3), #four_columns .img-item:nth-of-type(4)
-{
-margin-top: 25px;}
-
-footer .wrapper .column
-{
-font-size: 12px;
-width: 230px;}
-
-footer .wrapper ul li{
-padding-bottom: 20px;
-}
+@media max-width 915px {
+    #three_columns {
+        width: 500px;
+    }
+    
+    #three_columns .img-item:nth-of-type(3),#four_columns .img-item:nth-of-type(4) {
+        margin-top: 25px;
+    }
+    
+    footer .wrapper .column {
+        font-size: 12px;
+        width: 230px;
+    }
+    
+    footer .wrapper ul li {
+        padding-bottom: 20px;
+    }
 
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media (max-width: 320px)
-{
-/* Styles */
-
-header {
-height:300px;
-}
-
-.introtext
-{
-font-size:18px;
-line-height: 26px;
-border-top: 1px solid #D6D0C1;
-font-size: 16px;
-padding: 20px;
-margin-bottom: 30px;
-color: gray;
-font-weight: 300;
-max-width: 1200px;
-margin-top: 20px;
-text-align: center;
-}
-
-figcaption
-{
-line-height: 20px;
-font-size:14px;
-width:320px;
-padding:5px;}
-
-figcaption strong
-{
-width:320px;
-padding-bottom:2px;
-margin: 0px 0;
-display:block;
-border-bottom: none;}
-
-#logo img{
-width:100px;
-padding-left: 10px;
-padding-bottom: 10px;
-}
-    
-nav ul li a{
-font-size:10px;
-float: left;}
-
-#three_columns .img-item a img{
-        width:270px;
+@media max-width 320px {
+    /* Styles */
+    header {
+        height: 300px;
     }
-
-#three_columns .img-item {
-        width:320px;
+    
+    .introtext {
+        font-size: 18px;
+        line-height: 26px;
+        border-top: 1px solid #D6D0C1;
+        font-size: 16px;
+        padding: 20px;
+        margin-bottom: 30px;
+        color: gray;
+        font-weight: 300;
+        max-width: 1200px;
+        margin-top: 20px;
         text-align: center;
     }
+    
+    figcaption {
+        line-height: 20px;
+        font-size: 14px;
+        width: 320px;
+        padding: 5px;
+    }
+    
+    figcaption strong {
+        width: 320px;
+        padding-bottom: 2px;
+        margin: 0;
+        display: block;
+        border-bottom: none;
+    }
+    
+    #logo img {
+        width: 100px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+    }
+    
+    nav ul li a {
+        font-size: 10px;
+        float: left;
+    }
+    
+    #three_columns .img-item a img {
+        width: 270px;
+    }
+    
+    #three_columns .img-item {
+        width: 320px;
+        text-align: center;
+    }
+    
+    #three_columns .img-item img {
+        max-width: 320px;
+    }
+    
+    #three_columns .img-item {
+        margin-right: auto;
+        margin-left: auto;
+    }
+    
+    nav ul {
+        margin-top: -30px;
+        padding-top: 20px;
+        float: left;
+    }
+    
+    footer {
+        padding-bottom: 70px;
+        height: auto;
+    }
+    
+    footer .wrapper {
+        width: 320px;
+        margin: 0 auto;
+    }
+    
+    footer .wrapper .column {
+        margin-top: 30px;
+        float: none;
+        font-size: 14px;
+        width: auto;
+    }
+    
+    footer .wrapper .social {
+        display: none;
+    }
 
-#three_columns .img-item img{
-	max-width:320px;
+
+#copyright .wrapper {
+    font-size: 11px;
 }
 
-#three_columns .img-item{
-	margin-right: auto;
-	margin-left: auto;
-}
-nav ul
-{
-margin-top:-30px;
-padding-top: 20px;
-float:left;
+#copyright .wrapper .social {
+    position: absolute;
+    right: 0;
+    top: 25px;
 }
 
-footer
-{
-padding-bottom:70px;
-height: auto;}
-
-footer .wrapper
-{
-width: 320px;
-margin: 0 auto;}
-
-footer .wrapper .column
-{
-margin-top:30px;
-float:none;
-font-size: 14px;
-width: auto;}
-
-footer .wrapper .social
-{
-display:none;}
-}
-
-#copyright .wrapper
-{
-font-size:11px;
-}
-
-
-#copyright .wrapper .social
-{
-position:absolute;
-right:0;
-top:25px;}
-
-#copyright .wrapper .social a
-{
-transition: opacity .25s ease;
-opacity: 0.3;
-display:block;
-text-align: center;}
+#copyright .wrapper .social a {
+    transition: opacity .25s ease;
+    opacity: 0.3;
+    display: block;
+    text-align: center;
+}    
 
 }
